--- a/pod.yaml
+++ b/pod.yaml
@@ -7,4 +7,8 @@ spec:
   - name: nginx
     image: nginx:1.14.2
     ports:
+    - containerPort: 8080
+  - name: nginx1
+    image: nginx:1.14.2
+    ports:
     - containerPort: 80
